<resources>
    <string name="app_name">SchoolApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="join_group">Join Group</string>

    <string-array name="names">
        <item>Select</item>
        <item>Teacher</item>
        <item>Student</item>
    </string-array>

    <string-array name="student_class">
        <item>Class</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="if_already_a_member">if already a member ?</string>
    <string name="username">Username</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="submit">Submit</string>
    <string name="ask">Ask</string>
    <string name="type">Type</string>
    <string name="mobile">Mobile</string>
    <string name="mClass">Class</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="dd_mm_yy">dd/mm/yy</string>
    <string name="change_image">Change Image</string>
    <string name="profile">Profile</string>
    <string name="notes">Notes</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
</resources>
